Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 0.16
-
Fix Version/s: 0.17
-
Component/s: C++ Clustering
-
Labels:None
Description
The clustering code uses deprecated definitions from the corosync/cpg.h header file. These definitions are removed in Corosync 2.0. As a result, Qpid does not build against Corosync 2.0 (included in Linux distributions like Fedora 17).