QPID-4043 - Remove usage of deprecated definitions from Corosync.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1346951 13f79535-47bb-0310-9956-ffa450edef68